Fix spacing for the checkout header inner element

--- a/css/checkout-layout-120-dev-1.css
+++ b/css/checkout-layout-120-dev-1.css
@@ -135,8 +135,6 @@ body.woocommerce-checkout.has-checkout-header .wfc-content {
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
   width: 100%;
   min-height: 60px;
   background-color: #fff;
@@ -161,9 +159,15 @@ body.woocommerce-checkout.has-checkout-header .wfc-content {
 
 .wfc-checkout-header__inner {
   position: relative;
+  display: flex;
+  align-items: center;
   width: 100%;
+  min-height: 60px;
   max-width: 100%;
   padding: 0 20px; }
+  @media (min-width: 1000px) {
+    .wfc-checkout-header__inner {
+      min-height: 100px; } }
   @media (min-width: 750px) {
     .wfc-checkout-header__inner {
       max-width: 100%; } }
